test/basic/good/core055.lat
int main() {
	concat();
	return 0;
}

void concat() {

}

