test/basic/bad/core043.lat
void f() {

}

int main() {
	f() + f();
	return 0;
}
